# ai-investment-buddy

./: .env.example  .gitignore  LICENSE  README.md  aib-state-2026-06-19.json  aib-state.json  pyproject.toml
src/ai_investment_buddy/: __init__.py  audit.py  cli.py  config.py  macro_sleeve.py  models.py  runtime.py  universe.py  watchlist.py
src/ai_investment_buddy/api/: __init__.py  app.py  jobs.py
src/ai_investment_buddy/api/static/: index.html
src/ai_investment_buddy/brain/: __init__.py  consolidate.py  decide.py  graph.py  llm.py  mem_tools.py  prompts.py  screener.py  sectors.py  valuation_tools.py
src/ai_investment_buddy/data/: __init__.py  base.py  finnhub_provider.py  market_news.py  yfinance_provider.py
src/ai_investment_buddy/engine/: __init__.py  attribution.py  benchmark.py  execute.py  pipeline.py  risk.py
src/ai_investment_buddy/memory/: __init__.py  db.py  journal.py  portfolio.py  predictions.py  radar.py  snapshot.py  store.py  tools.py  valuations.py
tests/: test_hang_guards.py  test_macro_sleeve.py
