[project]
name = "ai-investment-buddy"
version = "0.1.0"
description = "An AI that allocates a paper portfolio daily and tries to beat the S&P 500 and Nasdaq."
readme = "README.md"
authors = [
    { name = "antoniogr7", email = "antoniogr7@users.noreply.huggingface.co" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "feedparser>=6.0.12",
    "google-genai>=2.8.0",
    "langgraph>=1.2.5",
    "lxml>=6.1.1",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "typer>=0.26.7",
    "yfinance>=1.4.1",
]

[project.scripts]
aib = "ai_investment_buddy.cli:app"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
